# ZeroTrace

./: .gitignore  discloud.config  index.html  package-lock.json  package.json  tailwind.config.js
scanner/: .gitignore  CMakeLists.txt  README.md  STARTEN.cmd  ZeroTrace.sln  build-singlefile.cmd  vcpkg.json  zerotrace_checker.cpp
scanner/demo/: ZeroTrace-Demo.html
scanner/demo/assets/: README.txt
scanner/docs/: ARCHITECTURE.md  BUILD.md  INSTALL.md  PIN_WORKFLOW.md  SCANNER_VERBESSERUNGEN.md  Schema.sql
scanner/driver/ZeroTraceDriver/: ZeroTraceDriver.inf  callbacks.c  callbacks.h  driver.c  hooks.c  hooks.h  hypervisor.c  hypervisor.h  ioctl.h  memory.c  memory.h  process.c  process.h
scanner/src/: main.cpp  report.cpp  report.hpp  scanner.cpp  scanner.hpp  signatures.hpp
scanner/src/ZeroTrace.App/: App.xaml  App.xaml.cs  ZeroTrace.App.csproj  app.manifest
scanner/src/ZeroTrace.App/Converters/: Converters.cs
scanner/src/ZeroTrace.App/Mvvm/: RelayCommand.cs  ViewModelBase.cs
scanner/src/ZeroTrace.App/Security/: IntegrityGuard.cs
scanner/src/ZeroTrace.App/Services/: UiStyleLoader.cs
scanner/src/ZeroTrace.App/Themes/: DarkTheme.xaml
scanner/src/ZeroTrace.App/ViewModels/: DashboardViewModel.cs  FindingsViewModel.cs  LiveScanViewModel.cs  MainViewModel.cs  ReportsViewModel.cs  SettingsViewModel.cs
scanner/src/ZeroTrace.App/Views/: ConsentWindow.xaml  ConsentWindow.xaml.cs  DashboardView.xaml  DashboardView.xaml.cs  FindingsView.xaml  FindingsView.xaml.cs  LiveScanView.xaml  LiveScanView.xaml.cs  (+7 more)
scanner/src/ZeroTrace.Core/: ZeroTrace.Core.csproj
(+824 files in other folders)
